[project]
name = "mcp-server-thingpark"
version = "0.1.0"
description = "MCP server for Actility ThingPark — manage LoRaWAN devices and send downlink commands via the DX Core API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Bruno Bruhn"}]
keywords = ["mcp", "lorawan", "thingpark", "actility", "iot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
]

dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.0",
    "ruff>=0.7.0",
]

[project.scripts]
mcp-server-thingpark = "mcp_server_thingpark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
